# KDU-2026-AI

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTEXT.md  DESIGN_DOCUMENT.md  Dockerfile  GraphRag2.ipynb  LLD.md  LLD_Multimodal_AI_Assistant_v1.docx  Makefile  README.md  alembic.ini  design_document.md  docker-compose.yml  implementation_lld.md  phase1_main.py  phase1_rag_evaluation (1).ipynb  phase1_rag_evaluation.ipynb  phase2_main.py  phase2_ragas_evaluation (1).ipynb  phase2_ragas_evaluation.ipynb  phase3_dataset_langsmith_ragas_evaluation (1).ipynb  phase3_main.py  plan.md  pyproject.toml  pytest.ini  requirements.txt  sample_doc.txt  skills-lock.json  streamlit-watchfix.err  tmp_spiderman.html
.claude/: settings.local.json
.serena/: project.yml
.streamlit/: config.toml
Docs/: architecture_decision_comparison.md  claude_code_usage_guide.md  content_accessibility_suite_implementation_plan.md  content_accessibility_suite_low_level_design.md  handoff_summary.md  low_level_design.md
PHASE1/: app_factory.py  bedrock_client.py  config.py  interfaces.py  llm_router.py  main.py  models.py  orchestrator.py  semantic_router.py
PHASE2/: Phase2.py
PHASE3/: app.py
alembic/: env.py
app/: AGENTS.md  __init__.py  __main__.py  cli.py  main.py  streamlit_app.py
config/: agents.yaml  config.yaml  logging.yaml  tasks.yaml
configs/: config.yaml  pricing.yaml
data/: prompt_metrics.json
demo-ui/: README.md  streamlit_app.py
docker_work_dir/: tmp_code_5e0efc20a23f5eb5d6863a9279368dbe1a10b8b5078a9112e4200ec5dc29a5c1.python
docs/: ARCHITECTURE_DIAGRAMS.md  IMPLEMENTATION_README.md  LLD.md  README.md  agent-workflows.md  chroma.sqlite3  design_document.md  diagrams.md  exercise.txt  extracted_triples.json  graphrag_lld.md  implementation-playbook.md  implementation_decisions.md  model_optimization_implementation_guide.md  modular_code_structure.md  phase1_baseline_results.csv  phase1_comparison_results.csv  phase1_degraded_results.csv  project-architecture.md  question.txt  requirements.txt  stock_trading_agent_lld_v1.md
evaluation/: __init__.py  datasets.py  metrics.py  run_eval.py
evidence/: docker_sandbox_output.txt  phase2_hitl_approved_output.txt  phase2_hitl_rejected_output.txt  phase3_cost_iteration_output.txt  unsafe_simulated_output.txt
host_demo_desktop/: notes.txt  test.txt
logs/: phase1_2026-05-03_13-40-20.md  phase2_2026-05-03_13-58-49.md  phase3_2026-05-03_14-20-10.md
phase1/: prepare_phase1_dataset.py
phase1_local_work_dir/: phase1_docker_sandbox.py
phase2/: json_grader.py
phase2_docker_work_dir/: phase1_unsafe_simulated.py  phase2_hitl_websurfer.py  (+1 more)
(+413 files in other folders)
