[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "content-accessibility-suite"
version = "0.1.0"
description = "Multi-modal content accessibility platform (PDF, image, audio)"
requires-python = ">=3.10"
readme = "README.md"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "integration: integration-level tests for end-to-end backend flows",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
